Today we explored more formating and moved the code from one file to another.

--- a/web2.html
+++ b/web2.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roblox</title>
+    <link rel="stylesheet" href="web.css">
 </head>
 <body>
     <!--below we have used inline css. Inline css in html tag-->
-    <section style="background: #111;color: white; width: 70%;  margin: 40px auto;  padding: 20px;  border-radius: 15px; box-shadow: 0 0 15px cadetblue;">
+    <section>
          <h1> Roblox </h1>
+         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFFrA7HfStaBDNccH61fvA8SefdrZtROTxQA&s" alt="Roblox Logo">
          <p> <i>Roblox</i> is a pretty fun app that contains many games inside of the app that are playable. <strong>You can create games</strong>... or just play them </p>
 
     </section>
