--- a/Food Website/foodwebsite.html
+++ b/Food Website/foodwebsite.html
@@ -143,6 +143,28 @@ iframe {
     width: 100%;
     height: 100%;
 }
+
+/* FOOTER */
+footer {
+    margin-top: 60px;
+    padding: 25px 15px;
+    text-align: center;
+    border-radius: 20px;
+    background: linear-gradient(135deg, #ff9f43, #ff6b6b);
+    color: white;
+    font-size: 0.95rem;
+    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+}
+
+footer a {
+    color: white;
+    font-weight: 600;
+    text-decoration: underline;
+}
+
+body.dark footer {
+    background: linear-gradient(135deg, #2d3436, #000000);
+}
 </style>
 </head>
 
@@ -213,6 +235,14 @@ iframe {
 </div>
 
 </div>
+
+<footer>
+    <p>🍽️ Food Around The World © 2026</p>
+    <p>
+        Made with ❤️ by Viransh |
+        <a href="#countries">Explore Foods</a>
+    </p>
+</footer>
 
 <script>
 function toggleDarkMode() {
